--- a/templates/bill.html
+++ b/templates/bill.html
@@ -264,14 +264,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="row text-end">
-                    <div class="col-lg-12 mb-5">
+                <div class="row text-end mb-4">
+                    <div class="col-4">
+                        <a href="{% url 'invoice:msgsending' invoice.id  %}" onclick="" id="Printbutton" class="btn btn-primary btn-sm"><i class="fa fa-print"></i> Sent Sms</a>
+                    </div>
+                    <div class="col-4 text-end">
                         <a onclick="printDiv()" id="Printbutton" class="btn btn-primary btn-sm"><i class="fa fa-print"></i> Print Your Invoice</a>
                     </div>
+                    
+                    <div class="col-4">
+
+                    </div>
                 </div>
-                <div class="col-lg-12 mb-5">
+                <!-- <div class="col-lg-12 mb-5">
                     <a href="{% url 'invoice:msgsending' invoice.id  %}" onclick="" id="Printbutton" class="btn btn-primary btn-sm"><i class="fa fa-print"></i> Sent Sms</a>
-                </div>
+                </div> -->
 
             </div>
     <!-- </div> -->
