--- a/templates/bill.html
+++ b/templates/bill.html
@@ -273,7 +273,7 @@
                                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                                     <div class="invoice-sign text-end pb-3">
                                                         <img class="img-fluid d-inline-block"
-                                                            src="{% static 'img/SmSign1.png' %}" alt="sign">
+                                                            src="{% static 'img/SIG.png' %}" alt="sign">
                                                     </div>
                                                     <p>  Authorised Signatory</p>
                                                 </div>
